# ZendalQ---prueba-t-cnica

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/config/: settings.py  urls.py
backend/tickets/: admin.py  urls.py
backend/tickets/migrations/: 0001_initial.py
backend/tickets/models/: ticket.py
backend/tickets/selectors/: __init__.py  selector_ticket.py
backend/tickets/serializers/: __init__.py  serializer_ticket.py
backend/tickets/services/: __init__.py  service_ticket.py
backend/tickets/tests/: test_ticket.py
backend/tickets/viewsets/: __init__.py  viewset_ticket.py
frontend/: Dockerfile  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/assets/css/: main.css
frontend/app/components/: TicketFilters.vue  TicketItem.vue  TicketList.vue
frontend/app/components/tickets/: TicketForm.vue
frontend/app/composables/: useTicketList.ts  useTicketsApi.ts
frontend/app/pages/: index.vue
frontend/app/types/: ticket.ts
